# Lab-20

./: CMakeLists.txt  file.c  tenTaskProgramm.c  test.c
libs/dataStructure/thread/: CMakeLists.txt  thread.c  thread.h
